--- a/app/assets/quiz.html
+++ b/app/assets/quiz.html
@@ -19,14 +19,30 @@
   <div class="row">
     <div class="small-12 column">
       <ol>
-        <li>Question</li>
-        <li>Question</li>
-        <li>Question</li>
-        <li>Question</li>
-        <li>Question</li>
-        <li>Question</li>
+        <li id="q1">Question<br>
+          <input type="radio">True
+          <input type="radio">False</li>
+        <li id="q2">Question<br>
+          <input type="radio">True
+          <input type="radio">False</li>
+        <li id="q3">Question<br>
+          <input type="radio">True
+          <input type="radio">False</li>
+        <li id="q4">Question<br>
+          <input type="radio">True
+          <input type="radio">False</li>
+        <li id="q5">Question<br>
+          <input type="radio">True
+          <input type="radio">False</li>
+        <li id="q6">Question<br>
+          <input type="radio">True
+          <input type="radio">False</li>
       </ol>
     </div>
+  </div>
+
+  <div>
+    <button id="quiz submit">Submit Your Answers</button>
   </div>
 
 </body>
