Fixed build to be working properly

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -11,7 +11,7 @@
   <div class="small-12 column" id="log"></div>
   <div class="row">
     <div class="small-12 column">
-      <p>See what shindigs are going on around you.</p>
+      <p>Meet people like you doing the stuff you do.</p>
     </div>
   </div>
   <div class"row">
