Fix 'grunt server' task

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -1,28 +1,56 @@
 <!DOCTYPE html>
+<html>
 <head>
   <title>Shindig | Login</title>
 
   <!-- stylesheets -->
   <link rel="stylesheet" href="css/styles.css" type="css/text" />
+
 </head>
+
 <body>
-  <!-- want to use Coquette Regular here -->
-  <h2 id="shindig">Shindig</h2>
-  <div class="small-12 column" id="log"></div>
-  <div class="row">
-    <div class="small-12 column">
-      <p>Meet people like you doing the stuff you do.</p>
+
+<div class="container">
+
+    <!-- want to use Coquette Regular here -->
+    <h2 id="shindig">Shindig</h2>
+
+    <div class="small-12 large-12 column" id="log"></div>
+
+    <div class="row">
+
+      <div class="small-12 large-12 column">
+
+        <p>Meet people like you doing the stuff you do.</p>
+
+      </div>
+
     </div>
-  </div>
-  <div class"row">
-    <div class="small-12 column">
-      <h3 id"sign-in">Sign In</h3>
-      <form>
-        <input type="text" value="Email or Username">
-        <input type="text" value="Password">
-      </form>
-      <button>Go!</button>
-      <button>Create a Profile</button>
+
+    <div class"row">
+
+      <div class="small-12 large-12 column">
+
+        <h3 id="sign-in">Sign In</h3>
+
+        <form>
+          <input type="text" value="Email or Username">
+          <input type="text" value="Password">
+        </form>
+
+        <button>Go!</button>
+        <button>Create a Profile</button>
+
+      </div>
+
     </div>
-  </div>
+
+</div><!-- end container -->
+
+<div class="footer">
+
+</div><!-- end footer -->
+
+
 </body>
+</html>
