Update index.html, package.json server.js and others to prep passport and other routes

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -39,7 +39,7 @@
         </form>
 
         <button>Go!</button>
-        <button>Create a Profile</button>
+        <button><a href="/register">Join</a></button>
 
       </div>
 
