Updated survey questions

--- a/app/assets/quiz.html
+++ b/app/assets/quiz.html
@@ -32,24 +32,36 @@
   <div class="row">
     <div class="small-12 column">
       <ol>
-        <li id="q1">Question<br>
-          <input type="radio">True
-          <input type="radio">False</li>
-        <li id="q2">Question<br>
-          <input type="radio">True
-          <input type="radio">False</li>
-        <li id="q3">Question<br>
-          <input type="radio">True
-          <input type="radio">False</li>
-        <li id="q4">Question<br>
-          <input type="radio">True
-          <input type="radio">False</li>
-        <li id="q5">Question<br>
-          <input type="radio">True
-          <input type="radio">False</li>
-        <li id="q6">Question<br>
-          <input type="radio">True
-          <input type="radio">False</li>
+        <li id="q1">Do you ride a fixie?<br>
+          <input type="radio">Yes
+          <input type="radio">No
+          <input type="radio">What's a fixie</li>
+        <li id="q2">Do you like to hike?<br>
+          <input type="radio">Yes
+          <input type="radio">No
+          <input type="radio">I am Bear Gryllls, does that answer the question...</li>
+        <li id="q3">Do you know Javascript?<br>
+          <input type="radio">Yes
+          <input type="radio">No
+          <input type="radio">I love that drink at Starbucks!</li>
+        <li id="q4">Are you a fan of Creed?<br>
+          <input type="radio">Yes
+          <input type="radio">No</li>
+        <li id="q5">Have you beaten FFVII?<br>
+          <input type="radio">Yes
+          <input type="radio">No
+          <input type="radio">5 times</li>
+        <li id="q6">Who is the best football team<br>
+          <input type="radio">Seahawks
+          <input type="radio">What's football?</li>
+        <li id="q7">What is your beer of choice?<br>
+          <input type="radio">Coffee
+          <input type="radio">Beer
+          <input type="radio">Water
+        <li id="q8">Do you own a dog?<br>
+          <input type="radio">Yes
+          <input type="radio">No
+          <input type="radio">All hail the great cat!</li>
       </ol>
     </div>
   </div>
