Completed 1st draft of register page

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -33,9 +33,9 @@
           <h4 id="signIn">Sign In</h4>
 
           <form action = "/login" method = "post">
-            <input type="text" id="email" name="email" placeholder="Email or Username">
+            <input type="text" id="loginEmail" name="email" placeholder="Email or Username">
             <br>
-            <input type="text" id="password" name="password" placeholder="Password">
+            <input type="text" id="loginPassword" name="password" placeholder="Password">
             <br>
             <button type="submit" class="login_button"><span class="white">Go!</span></button>
           </form>
