--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -5,6 +5,7 @@
 
   <!-- stylesheets -->
   <link rel="stylesheet" href="css/styles.css" type="css/text" />
+  <script src="browser.js"></script>
 
 </head>
 
