--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -16,9 +16,20 @@
 <div class="container">
 
   <div id="banner">
+    <div class="colBox" id="one"></div>
+    <div class="colBox" id="two"></div>
+    <div class="colBox" id="three"></div>
+    <div class="colBox" id="four"></div>
+    <div class="colBox" id="one"></div>
+    <div class="colBox" id="two"></div>
+    <div class="colBox" id="three"></div>
+    <div class="colBox" id="four"></div>
+    <div class="colBox" id="one"></div>
+    <div class="colBox" id="two"></div>
+    <div class="colBox" id="three"></div>
+    <div class="colBox" id="four"></div>
     <!-- want to use Coquette Regular here -->
     <h2 id="shindig">Shindig</h2>
-    <div class="small-12 large-12 column" id="log"></div>
   </div>
 
   <div class="mainContent">
