Add rough responsive

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -13,17 +13,15 @@
 
 <div class="container">
 
-  <div id="banner">
+  <div id="banner" class="banner_class">
     <!-- want to use Coquette Regular here -->
     <h2 id="shindig">Shindig</h2>
-    <div class="small-12 large-12 column" id="log"></div>
   </div>
 
   <div class="mainContent">
-
     <div class="row"><!-- 1st row -->
-      <div class="small-12 large-12 column">
-        <p id="description">Meet people like you, <br> doing the stuff you do.</p>
+      <div id="aboutshindig">
+        <p>Meet people like you, <br> doing the stuff you do.</p>
       </div>
     </div><!-- end of 1st row -->
 
@@ -49,7 +47,7 @@
     <div class="row"><!-- 3rd row -->
       <div class="small-12">
 
-        <a href="/register" id="createAccount"><button id="createAccountButton"><span class="white">Create an account</span></a></button>
+        <a href="/register" id="createAccount"><button id="createAccountButton" class="signup_button"><span class="white">Register</span></a></button>
 
       </div>
     </div><!-- end of 3rd row -->
