change greens and new font

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -5,6 +5,7 @@
 
   <!-- stylesheets -->
   <link rel="stylesheet" href="css/styles.css" type="css/text" />
+  <link href='http://fonts.googleapis.com/css?family=Shadows+Into+Light' rel='stylesheet' type='text/css'>
 
   <!-- scripts -->
   <script src="browser.js"></script>
