Enhance shindig template

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -15,7 +15,7 @@
 
 <div class="container">
 
-  <div id="banner" class="banner_class">
+  <div id="banner" class="bannerClass">
     <!-- want to use Coquette Regular here -->
     <h2 id="shindig">Shindig</h2>
   </div>
@@ -23,11 +23,13 @@
   <div class="mainContent">
 
     <div class="innerContainer">
+
       <div class="row"><!-- 1st row -->
-        <div id="aboutshindig">
+        <div id="aboutShindig">
           <p>Meet people like you, <br> doing the stuff you do.</p>
         </div>
       </div><!-- end 1st row -->
+
       <div class"row"><!-- 2nd row -->
         <div class="small-12 large-12 column">
 
@@ -39,7 +41,7 @@
               <br>
               <input type="text" id="loginPassword" name="password" placeholder="Password">
               <br>
-              <button type="submit" class="login_button"><span class="white">Go!</span></button>
+              <button type="submit" class="loginButton"><span class="white">Go!</span></button>
             </form>
 
           </div>
