--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -27,12 +27,13 @@
       <div class"row"><!-- 2nd row -->
         <div class="small-12 large-12 column">
           <form id="loginform" action = "/login" method = "post">
-            <img id="joinImg" class="backbone" src="../Join.png"/>
-            <img id="loginImg" src="../Go.png"/>
+            
+            
             <div id="loginBox">
-              <h4 id="signIn">Sign In</h4>
-              <input type="text" id="loginEmail" name="email" placeholder="Email or Username">
-              <input type="text" id="loginPassword" name="password" placeholder="Password">
+            <div id="joinImg"><img  class="backbone" src="../Join.png"/></div>
+              <div id="signIn">Sign In</div><div id="loginImg"><img src="../Go.png"/></div>
+              <div id="loginEmail"><input type="text"  name="email" placeholder="Email or Username"></div>
+              <div id="loginPassword"><input type="text" name="password" placeholder="Password"></div>
             </div>
           </form>
         </div>
