landing ui enhancements

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -32,7 +32,7 @@
               <div id="signIn">Sign In</div>
               <button id="loginBtn" type="submit"><div id="loginImg"></div></button>
               <div id="loginInput">
-                <input id="email" type="text"  name="email" placeholder="Email or Username">
+                <input id="email" type="text"  name="email" placeholder="Email">
                 <input id="password" type="text" name="password" placeholder="Password">
               </div>
             </div>
