--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -15,7 +15,7 @@
 <body>
 <div class="container">
 
-  <div class="banner"></div>
+  <div class="banner"><div id="navbar"></div></div>
 
   <div class="mainContent">
 
