--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -17,8 +17,8 @@
 
   <div class="banner">
     <div id="navbar" align="right">
-          <button type="submit"><a href="/shindigs">Show Shindigs</a></button>
-          <button type="submit"><a href="/createshindig">Create Shindig</a></button>
+          <button type="submit" class="shindigs_route"><a href="/shindigs">Show Shindigs</a></button>
+          <button type="submit" class="createshindigs_route"><a href="/createshindig">Create Shindig</a></button>
           <button type="submit"><a href="/logout">Log Out</a></button>
     </div>
   </div>
