add functionality for displaying all shindigs after adding one and when using nav bar to go to all shindigs

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -17,7 +17,7 @@
 
   <div class="banner">
     <div id="navbar" align="right">
-          <button type="submit"><a href="/shindigs">Show Shindigs</a></button>
+          <button type="submit"><a href="/#shindigs">Show Shindigs</a></button>
           <button type="submit"><a href="/createshindig">Create Shindig</a></button>
           <button type="submit"><a href="/logout">Log Out</a></button>
     </div>
