nav buttons styles

--- a/app/assets/index.html
+++ b/app/assets/index.html
@@ -16,10 +16,11 @@
 <div class="container">
 
   <div class="banner">
-    <div id="navbar" align="right">
-          <button type="submit"><a href="/#shindigs">Show Shindigs</a></button>
-          <button type="submit"><a href="/#newshindig">Create Shindig</a></button>
-          <button type="submit"><a href="/logout">Log Out</a></button>
+  <div class="bannerInner small-12 column"></div>
+    <div class="small-12 large-6 column" id="navbar">
+          <button class="navButton" type="submit"><a href="/#shindigs">Show Shindigs</a></button>
+          <button class="navButton" type="submit"><a href="/#newshindig">Create Shindig</a></button>
+          <button class="navButton" type="submit"><a href="/logout">Log Out</a></button>
     </div>
   </div>
 
